# ngrok-agent-portal

./: .gitignore  README.md
agent-go/: go.mod  main.go
agent-go/app/: app.go
agent-go/controller/: controller.go
agent-go/middleware/: middleware.go
agent-go/module/: module.go
agent-go/postman-collection/: agent-go.postman_collection.json
agent-go/routes/: routes.go
agent-nodejs/: endpointsmanager.js  package.json
agent-nodejs/controllers/: agentEndpointController.js
agent-python/: app.py  endpointsmanager.py  server.py
agent-python/controllers/: agentEndpointController.py
agent-python/routes/: agentEndpoints.py
agent-python/utils/: config.py  logger.py
agent-rust/: Cargo.toml
agent-rust-update/: 404.html
agent-rust-update/src/: app.rs  main.rs
agent-rust-update/src/controller/: mod.rs
agent-rust-update/src/routes/: mod.rs
agent-rust/src/: app.rs  endpoints_manager.rs  main.rs
agent-rust/src/controllers/: agent_endpoint_controller.rs  mod.rs
agent-rust/src/routes/: agent_endpoints.rs  mod.rs
agent-rust/src/utils/: config.rs  logger.rs
backend/controllers/: agentController.js  agentEndpointController.js
frontend/src/components/: AgentEndpoints.jsx  AgentGrid.jsx
