[package]
name = "agent-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-cors = "0.6.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.14"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ngrok = { version = "0.14.0-pre.13" }
yaml-rust = "0.4.5"

[dev-dependencies]
actix-rt = "2.5.0"
